cargo-features = ["profile-rustflags"]

[package]
name = "sequence_distance_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}
edit-distance = "2.1.3"
hamming = "0.1.3"
levenshtein = "1.0.5"
libwfa = "0.1.2"
rand = "0.8.5"
rust_hamming_distance = "0.1.1"
rust_wfa = "1.0.0"
seqalign = "0.2.3"
triple_accel = "0.4.0"

[profile.release]
opt-level = 3               # Use best optimizations
overflow-checks = false     # Disable integer overflow checks.
rustflags = ["-C", "target-feature=+avx,+sse3,+avx2,+fma"]#
lto = "fat"

[[bench]]
name = "edit_benchmark"
harness = false
path = "src/benches/edit_benchmark.rs"

